--- a/vim_binding.yaml
+++ b/vim_binding.yaml
@@ -1,6 +1,6 @@
 Type: IPython Notebook Extension
-Name: VIM binding
-Description: Adds VIM keyboard binding for Jupyter notebooks.
+Name: VIM binding esc esc
+Description: Adds VIM keyboard binding for Jupyter notebooks. ESC ESC
 Link: README.md
 Main: vim_binding.js
 Compatibility: 4.x, 5.x
